<?xml version="1.0"?>
<package format="2">
  <name>vpx_image_transport</name>
  <version>0.0.2</version>
  <description>
    vpx_image_transport provides a plugin to image_transport for
    transparently sending an image stream encoded with the VPX(including
    VP8/VP9) codecs.
  </description>
  <maintainer email="jonathan.dong@intel.com">Jonathan Dong</maintainer>
  <license>BSD</license>
  <author email="jonathan.dong@intel.com">Jonathan Dong</author>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/vpx_image_transport</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>image_transport</depend>
  <depend>message_runtime</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>cv_bridge</depend>
  <build_depend>libvpx-dev</build_depend>
  <build_depend>libva-dev</build_depend>
  <exec_depend>libvpx3</exec_depend>
  <exec_depend>libva1</exec_depend>

  <export>
    <image_transport plugin="${prefix}/vpx_plugins.xml" />
  </export>
</package>
